cppcheck_report.txt
Implementation/.vscode/src/gamecd.c:28:19: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
                  scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
                  ^
Implementation/.vscode/src/gamecd.c:58:19: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
                  scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
                  ^
Implementation/.vscode/src/gamecd.c:87:19: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
                  scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
                  ^
Implementation/.vscode/src/gamecd.c:116:19: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
                  scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
                  ^
Implementation/.vscode/src/gamecd.c:145:19: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
                  scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
                  ^
Implementation/.vscode/src/gamecd.c:174:19: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
                  scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
                  ^
Implementation/.vscode/src/gamecd.c:203:19: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
                  scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
                  ^
Implementation/.vscode/src/gamecd.c:232:19: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
                  scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
                  ^
Implementation/.vscode/src/gamecd.c:261:19: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
                  scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
                  ^
Implementation/.vscode/src/gamecd.c:50:17: style: Variable 'count' is assigned a value that is never used. [unreadVariable]
           count--;
                ^
Implementation/.vscode/src/gamecd.c:80:17: style: Variable 'count' is assigned a value that is never used. [unreadVariable]
           count--;
                ^
Implementation/.vscode/src/gamecd.c:109:17: style: Variable 'count' is assigned a value that is never used. [unreadVariable]
           count--;
                ^
Implementation/.vscode/src/gamecd.c:138:17: style: Variable 'count' is assigned a value that is never used. [unreadVariable]
           count--;
                ^
Implementation/.vscode/src/gamecd.c:167:17: style: Variable 'count' is assigned a value that is never used. [unreadVariable]
           count--;
                ^
Implementation/.vscode/src/gamecd.c:196:17: style: Variable 'count' is assigned a value that is never used. [unreadVariable]
           count--;
                ^
Implementation/.vscode/src/gamecd.c:225:17: style: Variable 'count' is assigned a value that is never used. [unreadVariable]
           count--;
                ^
Implementation/.vscode/src/gamecd.c:254:17: style: Variable 'count' is assigned a value that is never used. [unreadVariable]
           count--;
                ^
Implementation/.vscode/src/gamecd.c:283:17: style: Variable 'count' is assigned a value that is never used. [unreadVariable]
           count--;
                ^
Implementation/.vscode/test/testgamecd.c:18:19: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
                  scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
                  ^
Implementation/.vscode/test/testgamecd.c:41:9: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
        scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
        ^
Implementation/.vscode/test/testgamecd.c:46:9: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
        scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
        ^
Implementation/.vscode/test/testgamecd.c:51:9: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
        scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
        ^
Implementation/.vscode/test/testgamecd.c:56:9: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
        scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
        ^
Implementation/.vscode/test/testgamecd.c:61:9: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
        scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
        ^
Implementation/.vscode/test/testgamecd.c:66:9: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
        scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
        ^
Implementation/.vscode/test/testgamecd.c:71:9: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
        scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
        ^
Implementation/.vscode/test/testgamecd.c:76:9: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
        scanf("%s\n%s\n%s\n%s",str1,str2,str3,str4);
        ^
Implementation/.vscode/test/testgamecd.c:35:17: style: Variable 'count' is assigned a value that is never used. [unreadVariable]
           count--;
                ^
Implementation/.vscode/unity/unity_internals.h:1055:0: error: The code contains unhandled character(s) (character code=194). Neither unicode nor extended ascii is supported. [preprocessorErrorDirective]
© 2021 GitHub, Inc.
^
nofile:0:0: information: Cppcheck cannot find all the include files (use --check-config for details) [missingInclude]

